fix new sit datepicker alignment

--- a/app/assets/stylesheets/opensit.css.scss
+++ b/app/assets/stylesheets/opensit.css.scss
@@ -430,6 +430,7 @@ $colHighlight   : whitesmoke;
 }
 
 /* Date time picker */
+.sit_created_at > div { padding-left: 0; }
 .datepicker table tr td.active:active,
 .datepicker table tr td.active:hover:active,
 .datepicker table tr td.active.disabled:active,
